fix: add spacing on the search results fallback

--- a/src/app/pages/fallback/fallback.component.scss
+++ b/src/app/pages/fallback/fallback.component.scss
@@ -3,7 +3,7 @@
     gap: 1rem;
     align-items: center;
     flex-direction: column;
-    height: calc(100% - 125px);
+    min-height: calc(100% - 125px);
     padding: 3rem 1rem;
     width: 800px;
     max-width: 100%;
